--- a/src/app/carnet/pages/update/update.component.html
+++ b/src/app/carnet/pages/update/update.component.html
@@ -118,7 +118,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Departamento: {{ carnet?.department?.name}}</mat-label>
         <mat-select formControlName="department" (selectionChange)="onDepartmentSelection($event)"
-          panelClass="panelResponsive" required>
+          panelClass="panelResponsive">
           <mat-option *ngFor="let department of filteredDepartment" [value]="department.id">
             <span>{{department.name}}
             </span>
@@ -131,7 +131,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Cargo: {{ carnet?.charge?.name}}</mat-label>
         <!--<input matInput formControlName="charge" >-->
-        <mat-select formControlName="charge" required>
+        <mat-select formControlName="charge">
             @for (cargo of charge; track cargo.id) {
                 <mat-option value="{{ cargo.id }}">{{ cargo.name }}</mat-option>
             } @empty {
@@ -143,7 +143,7 @@
 
       <mat-form-field appearance="fill">
         <mat-label>Nivel de Acceso: {{ carnet?.access_levels?.name}}</mat-label>
-        <mat-select formControlName="access_levels" required>
+        <mat-select formControlName="access_levels">
             @for (piso of access; track piso.id) {
                 <mat-option value="{{ piso.id }}">{{ piso.name }}</mat-option>
             } @empty {
@@ -172,7 +172,7 @@
 
       <mat-form-field appearance="fill">
         <mat-label>Estado: {{ carnet?.state?.name}}</mat-label>
-        <mat-select formControlName="state" required>
+        <mat-select formControlName="state">
             @for (state of states; track state.id) {
                 <mat-option value="{{ state.id }}">{{ state.name }}</mat-option>
             } @empty {
